# anime-face-detector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TESTING.md  TEST_RESULTS.md  demo.ipynb  demo_gradio.py  docker-compose.yml  pyproject.cuda.toml  pyproject.toml  requirements.txt  setup.py  test_new_implementation.py  test_onnx.py
.github/workflows/: precommit.yml
anime_face_detector/: __init__.py  detector.py  onnx_helper.py
anime_face_detector/configs/mmdet/: faster-rcnn.py  yolov3.py
anime_face_detector/configs/mmpose/: hrnetv2.py
anime_face_detector/models/: __init__.py  hrnetv2.py  inference.py
docs/: README.md  api_reference.md  architecture.md  development.md  models_and_configs.md
docs/en/: README.md  api_reference.md  architecture.md  development.md  models_and_config.md
src/anime_face_detector/: __init__.py  detector.py
src/anime_face_detector/configs/: __init__.py
src/anime_face_detector/configs/mmdet/: faster-rcnn.py  yolov8.py
src/anime_face_detector/configs/mmpose/: hrnetv2.py
src/anime_face_detector/models/: hrnetv2.py  inference.py
tests/: test_HRNetV2.py  test_YOLO_HRNetV2.py  test_e2e_mock.py  test_integration.py  test_new_implementation.py
tools/: convert_to_onnx.py
training/: .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
training/configs/: default.yaml
training/scripts/: evaluate.py  train.py
training/tools/: annotate_landmarks.py  crawl_images.py  dataset.py
