[project]
name = "anime-face-detector"
version = "0.1.0"
description = "Anime Face Detector using YOLOv8 and HRNetV2 (pure PyTorch)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "hysts" }]
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.21.3,<2.0",
    "opencv-python-headless>=4.5.4.58",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "huggingface-hub>=0.20.0",
    "ultralytics>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/hysts/anime-face-detector"

[project.optional-dependencies]
demo = ["gradio>=4.0.0"]

[tool.uv.extra-build-dependencies]
chumpy = ["wheel", "pip", "setuptools"]

[dependency-groups]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B028", "B905"]

[tool.ruff.lint.per-file-ignores]
"anime_face_detector/configs/**/*.py" = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "single"
