[project]
name = "anime-face-detector-training"
version = "0.1.0"
description = "Training tools for anime face landmark detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "gradio>=5.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "gallery-dl>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
